--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ footer a {
 }
 </style>
 
-<script>
+<script type="text/javascript">
     const signUpButton = document.getElementById('signUp');
 const signInButton = document.getElementById('signIn');
 const container = document.getElementById('container');
